Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
   script:
     - cd frontend
     - npm install
-    - npm run build
+    - CI=false npm run build
   artifacts:
     paths:
       - build/
