--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,10 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-router": "^6.8.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11",
+    "react-hook-form": "^7.43.0"
   },
   "scripts": {
     "start": "react-scripts start",
