lazyloading in product images

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "material-ui-popup-state": "^5.0.4",
     "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
+    "material-ui-popup-state": "^5.0.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-router": "^6.8.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "styled-components": "^5.3.6",
-    "react-bootstrap": "^2.7.0",
-    "react-bootstrap-icons": "^1.10.2",
-    "react-router": "^6.8.0",
     "web-vitals": "^2.1.4",
-    "formik": "^2.2.9",
-    "yup": "^0.32.11",
-    "react-hook-form": "^7.43.0"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
