--- a/backend/env/local.env
+++ b/backend/env/local.env
@@ -1,1 +1,3 @@
 PORT = '5001'
+MONGODB_URL= mongodb+srv://Group-10:r7VCsxNRGOrqQNT5@cluster0.vsbpsvc.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET='GROUP-10_Webproject'
