--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@reduxjs/toolkit": "^1.9.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1"
   }
 }
